welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:17: error: value recule is not a member of Nothing
possible cause: maybe a semicolon is missing before `value recule'?
    	}recule();
         ^